style : toggleBtn cursor pointer로 style 변경

--- a/류진숙/Password Validation/validation.css
+++ b/류진숙/Password Validation/validation.css
@@ -54,6 +54,7 @@ body {
   top: 5px;
   right: 10px;
   box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.1); 
+  cursor: pointer;
 }
 
 .box .inputBox .show-icon::before {
