Day15 Custom File Upload Button

--- a/박혜진/Day15_Custom File Upload Button/practice/style.css
+++ b/박혜진/Day15_Custom File Upload Button/practice/style.css
@@ -60,7 +60,7 @@ label:hover {
 ul {
     list-style: none;
     height: 10em;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .container li {
